    - added custom cache handling function ability. (Monte)
    - added assign attribute to insert, fetch, math, and counter functions,
      documented. (Monte)
    - fixed bug with fetch testing for local file when http address. (Monte)
    - fixed bug with counter and skipval setting. (Monte)
    - made {config_load ...} merge globals from each config file only once per
      scope, thus avoiding several problems. (Andrei)
    - added {foreach ...} tag that can be used to iterate through
      non-sequential and associative arrays. (Andrei)
    - speeded up section property access a bit. (Andrei)
    - removed $smarty variable from storage used by normal template variables,
      to prevent any problems. (Andrei)
    - fixed a bug that could cause parse error with quotes inside literal
      blocks. (Andrei, Alexander Belonosov)
    - added 'field_array' attribute to html_select_time function. (Andrei,
      Michael Caplan)
    - documented {section} "max" attribute. (Monte)
    - fixed notice message in Smarty_Compiler.class.php. (Monte)
    - fixed bug with clear_cache introduced in 1.4.6, third parameter should
      default to null. (Monte)
    - updated Config_File class to support '\' path separator in OS/2. (Monte,
      Francesco Ciprianii)
    - removed secure_ext setting (not used). (Monte)
    - made cache reading process more efficient. (Monte)
    - fixed bug, is_cached() now supports new 1.4.6 caching behavior. (Monte)
    - update FAQ with mailing list Reply-To header FAQ. (Monte)
    - supress error messages for fopen(), fix cache to regenerate if cache
      file is not available (i.e. cluster race condition). (Monte)
    - added index key example to QUICKSTART guide. (Monte)

Version 1.4.6
-------------
    - fixed bug with {assign ...} when passing an empty value. (Monte)
    - add more warning message fixes. (Monte, Tara Johnson)
    - documentation updates. (Monte)