@@ -1,3 +1,4 @@
+    - added $smarty.section.* syntax for accessing section properties. (Andrei)
     - added custom cache handling function ability. (Monte)
     - added assign attribute to insert, fetch, math, and counter functions,
       documented. (Monte)
